<resources>
    <string name="app_name">seebook</string>

    <string name="menu_book">书架</string>
    <string name="menu_community">社区</string>
    <string name="menu_find">发现</string>
    <string name="menu_more">更多</string>

    <string name="recommend_title">模拟掌阅书架</string>
    <string name="recommend_finish">完成</string>
    <string name="recommend_last_read">最近阅读</string>
    <string name="recommend_all_select">全选</string>
    <string name="recommend_delete">删除</string>
    <string name="recommend_move">移动至</string>
    <string name="recommend_share">分享</string>
    <string name="recommend_book_order">加入书单</string>
    <string name="recommend_detail">详情</string>
    <string name="recommend_category_title_edit_hint">分类名称最多显示10个字符</string>

    <!--阅读页面相关-->
    <string name="book_read_reading">朗读</string>
    <string name="book_read_community">社区</string>
    <string name="book_read_change_source">换源</string>
    <string name="book_read_introduce">简介</string>
    <string name="book_read_mode_day">夜间</string>
    <string name="book_read_mode_day_manual_setting">日间</string>
    <string name="book_read_mode_night_manual_setting">夜间</string>
    <string name="book_read_feedback">反馈</string>
    <string name="book_read_settings">设置</string>
    <string name="book_read_download">缓存</string>
    <string name="book_read_mark">书签</string>
    <string name="book_read_toc">目录</string>
    <string name="add_bookmark">新增书签</string>
    <string name="manage_bookmark">管理</string>
    <string name="clear_bookmark">清除</string>
    <string name="book_read_download_error">网络异常，已取消下载</string>
    <string name="book_read_download_complete">缓存完成，失败%1$d章</string>
    <string name="book_read_alreday_download">已缓存过:%1$s(%2$d/%3$d)...</string>
    <string name="book_read_download_progress">正在缓存:%1$s(%2$d/%3$d)...</string>
    <string name="net_error">网络异常</string>
    <string name="book_read_add_book">添书</string>
    <string name="book_read_would_you_like_to_add_this_to_the_book_shelf">是否将本书加入书架？</string>
    <string name="book_read_join_the_book_shelf">加入书架</string>
    <string name="book_read_not">不了</string>
</resources>
