<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <android.support.v4.view.ViewPager
        android:id="@+id/main_viewpager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_height"
        android:background="@android:color/darker_gray"/>

    <RadioGroup
        android:id="@+id/main_rgp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton
            style="@style/MenuButtonStyle"
            android:drawableTop="@drawable/menu_book_select"
            android:text="@string/menu_book" />
        <RadioButton
            style="@style/MenuButtonStyle"
            android:drawableTop="@drawable/menu_community_select"
            android:text="@string/menu_community" />
        <RadioButton
            style="@style/MenuButtonStyle"
            android:drawableTop="@drawable/menu_find_select"
            android:text="@string/menu_find" />
        <RadioButton
            style="@style/MenuButtonStyle"
            android:drawableTop="@drawable/menu_more_select"
            android:text="@string/menu_more" />
    </RadioGroup>
</LinearLayout>
