<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_bar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFF"
    android:elevation="3dp"
    android:orientation="horizontal"
    android:paddingTop="10dp"
    android:paddingBottom="10dp">

    <RelativeLayout
        android:id="@+id/container_delete"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:clipToPadding="false">
        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/ic_delete"
            style="@style/RecBottomImage"
            app:srcCompat="@drawable/ic_delete" />
        <TextView
            android:id="@+id/ic_delete_badge"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_alignRight="@id/ic_delete"
            android:layout_marginRight="-8dp"
            android:layout_marginTop="-8dp"
            android:background="@drawable/bg_circle_red"
            android:gravity="center"
            android:textColor="#FFF"
            android:textSize="10sp"
            tools:text="1"
            android:visibility="invisible" />
        <TextView
            android:id="@+id/text_delete"
            style="@style/RecBottomText"
            android:layout_below="@id/ic_delete"
            android:text="@string/recommend_delete"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/container_move"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/ic_move"
            style="@style/RecBottomImage"
            app:srcCompat="@drawable/ic_move" />
        <TextView
            android:id="@+id/text_move"
            style="@style/RecBottomText"
            android:layout_below="@id/ic_move"
            android:text="@string/recommend_move" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/container_share"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/ic_share"
            style="@style/RecBottomImage"
            app:srcCompat="@drawable/ic_share" />
        <TextView
            android:id="@+id/text_share"
            style="@style/RecBottomText"
            android:layout_below="@id/ic_share"
            android:text="@string/recommend_share" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/container_order"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/ic_order"
            style="@style/RecBottomImage"
            app:srcCompat="@drawable/ic_order" />
        <TextView
            android:id="@+id/text_order"
            style="@style/RecBottomText"
            android:layout_below="@id/ic_order"
            android:text="@string/recommend_book_order"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/container_detail"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/ic_detail"
            style="@style/RecBottomImage"
            app:srcCompat="@drawable/ic_detail" />
        <TextView
            android:id="@+id/text_detail"
            style="@style/RecBottomText"
            android:layout_below="@id/ic_detail"
            android:text="@string/recommend_detail" />
    </RelativeLayout>
</LinearLayout>